--- a/tlg-theme/templates/article.html
+++ b/tlg-theme/templates/article.html
@@ -35,6 +35,7 @@
 
         <div class="column col-12">
         <footer class="post-info text-left">
+            <p>If you have any comments about this blog post, email me at <a href="mailto:info@coraxfm.uk">info@coraxfm.uk</a><p>
             <time class="published" datetime="{{ article.date.isoformat() }}">
               {{ article.locale_date }}
             </time>
