--- a/tlg-theme/templates/archives.html
+++ b/tlg-theme/templates/archives.html
@@ -23,7 +23,7 @@
         <div class="card">
 
             <div class="card-image hide-md">
-                <img class="img-responsive" src="../images/{{ article.image }}">
+                <!-- <img class="img-responsive" src="../images/{{ article.image }}"> -->
             </div>
             
             <div class="card-body">
