change 'get quote' text back to text-light

--- a/tlg-theme/templates/base.html
+++ b/tlg-theme/templates/base.html
@@ -59,7 +59,7 @@
                     <a class="btn btn-link" href="{{ SITEURL }}/{{ p.url }}">{{ p.title }}</a>
                 {% endfor %}
                 <a class="btn btn-link mr-2" href="../archives.html">Blog</a>
-                <a class="btn btn-link bg-success text-light@ hide-sm" href="../">Get A Quote</a>
+                <a class="btn btn-link bg-success text-light hide-sm" href="../">Get A Quote</a>
             </section>
 
             <secion class="navbar-section show-sm">
