added class tohide images on small screens on index page

--- a/tlg-theme/templates/index.html
+++ b/tlg-theme/templates/index.html
@@ -83,7 +83,7 @@
                         <li>Advice</li>
                     </ul>
 
-                    <img height=300px width=300px  class="p-centered img-responsive" src="../images/storyset/Fill out-amico.svg" alt="Image of a person holding a really big pen and completing an equally big form">
+                    <img height=300px width=300px  class="p-centered img-responsive hide-md" src="../images/storyset/Fill out-amico.svg" alt="Image of a person holding a really big pen and completing an equally big form">
                 </div>
                 
                 <div class="column col-4 col-md-12">
@@ -95,7 +95,7 @@
                         <li>Payroll</li>
                     </ul>
 
-                    <img height=300px width=300px  class="p-centered img-responsive" src="../images/storyset/Statistics-amico.svg" alt="A person holiding a clipboard, looking at a curvy line graph with percentage signs. Also there is a doughnut chart on the floor.">
+                    <img height=300px width=300px  class="p-centered img-responsive hide-md" src="../images/storyset/Statistics-amico.svg" alt="A person holiding a clipboard, looking at a curvy line graph with percentage signs. Also there is a doughnut chart on the floor.">
                 </div>
                 
                 <div class="column col-4 col-md-12">
@@ -106,7 +106,7 @@
                         <li>Business Analysis</li>
                         <li>Forecasts and Budgeting</li>
                     </ul>
-                    <img height=300px width=300px  class="p-centered img-responsive" src="../images/storyset/Report-amico.svg" alt="A person holding a clipboard, looking at a giant tablet containing some serious looking reports. He left his massive pencil and second clipboard on the floor. Presumably because he can't hold them.">
+                    <img height=300px width=300px  class="p-centered img-responsive hide-md" src="../images/storyset/Report-amico.svg" alt="A person holding a clipboard, looking at a giant tablet containing some serious looking reports. He left his massive pencil and second clipboard on the floor. Presumably because he can't hold them.">
                 </div>
 
             </div>
